# advent-of-code

./: .gitignore  Cargo.toml  README.md
2020/1/: puzzle_2020_1.py
2021/: README.md
2021/1/: prompt.txt
2021/2/: main.py  prompt.txt  puzzle_2021_2.py
2021/2021/: README.md
2021/2021/1/: puzzle_2021_1.py
2021/2021/10/: puzzle_2021_10.py
2021/2021/11/: puzzle_2021_11.py
2021/2021/4/: example_input.txt  input.txt
2021/2021/5/: map.txt
2021/2021/8/: puzzle_2021_8.py
2021/3/: prompt.txt  puzzle_2021_3.py
2021/4/: example.py  puzzle_2021_4.py
2021/5/: puzzle_2021_5.py
2021/6/: prompt.txt
2021/7/: prompt.txt  puzzle_2021_7.py
2021/8/: ex.py
2021/puzzle_template/: puzzle_2021_X.py
2023/: settings.gradle.kts
2024/: README.md  pyproject.toml
2024/day0/: day0.py
2024/day1/: day1.py
2024/day2/: day2.py
2024/day3/: day3.py
2024/day4/: day4.py
2024/day5/: day5.py
2024/day6/: day6.py
2024/day7/: d7.py  day7.py
2024/day8/: day8.py
2024/day9/: day9.py
2025/: .gitignore
2025/day00/: day00.py
2025/day01/: day01.py  main.rs
2025/day01rs/: Cargo.toml
2025/day02/: day02.py
2025/day03/: day03.py
2025/day04/: day04.py
2025/day05/: day05.py
2025/day06/: day06.py
2025/day07/: day07.py
2025/day08/: day08.py
2025/day09/: day09.py  day09_input.txt
2025/day1/: day1.py
2025/day10/: day10.py  requirements.txt
2025/day11/: day11.py
2025/day12/: day12.py
puzzle_template/: puzzle_2021_X.py
starters/python/: LICENSE  new_day.py  pyproject.toml
starters/python/day00/: day00.py
starters/rust/: README.md  main.rs
(+20 files in other folders)
