[tool.poetry]
name = "aoc-python-starter"
version = "0.1.0"
description = ""
authors = ["wcchristian <christian.andersen@datasite.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
